Finalize security for dev-shell and local business cockpit